--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
     "js-cookie": "^3.0.1",
     "next": "12.0.3",
     "next-cookies": "^2.0.3",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
     "react-toastify": "^8.1.0"
   },
