--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "js-cookie": "^3.0.1",
     "next": "12.0.3",
     "next-cookies": "^2.0.3",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
-    "react-toastify": "^8.1.0"
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
