--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "next": "12.0.3",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^7.0.5",
