--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
